# novelforge

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  dev.bat  dev.ps1  e2e_test.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tmp_search_novel_forge.json
.agents/skills/novelforge/: SKILL.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: desktop-feature-development.md  engine-api-route-addition-or-refactor.md  feature-development.md
.claude/skills/novelforge/: SKILL.md
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.kimchi/memory/: context.md  known-issues.md  lessons.md
.kiro/steering/: lessons-learned.md
apps/desktop/: eslint.config.cjs  index.html  package.json  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.electron.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/dist-electron/: main-dev.js  main.js  preload.js  protocol.js  (+1 more)
apps/engine/: .coverage  __init__.py  _bootstrap.py  _bootstrap_frontend.py  _wire_fts.py  app.py  http_main.py  main.py  requirements.txt  run.py  server.py
scripts/: __main__.py  build_engine.py  dev.bat  dev.js  dev.py  e2e_smoke_test.py  run-dev.cmd  self_update.py  update.bat  win-dev.bat
tests/: conftest.py  test_engine.py
tests/e2e/: test_e2e_api.py
tests/integration/: test_integration.py
tests/unit/: test_ai_routes.py  test_context_builder.py  test_jobs_routes.py  test_providers.py  test_search_service.py
(+222 files in other folders)
