[project]
name = "novelforge"
version = "0.2.0"
description = "AI-powered novel writing studio"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["apps/engine/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
